# geneweaver-client

./: .coveragerc  .gitignore  CONTRIBUTING.md  README.md  bitbucket-pipelines.yml  pyproject.toml
.github/workflows/: _check-coverage-action.yml  _format-lint-action.yml  _run-tests-action.yml  coverage.yml  release.yml  run-tests.yml  tests.yml
src/geneweaver/client/: __init__.py  auth.py  config.py  exceptions.py  gedb.py  types.py  user_config.py
src/geneweaver/client/api/: __init__.py  aon.py  auth.py  exc.py  genes.py  genesets.py  legacy.py  mapping.py  utils.py
src/geneweaver/client/api/graph/: __init__.py  graph.py
src/geneweaver/client/api/v3/: __init__.py  genesets.py
src/geneweaver/client/batch/: __init__.py
src/geneweaver/client/cli/: __init__.py  auth.py  batch.py  main.py  parser.py
src/geneweaver/client/cli/alpha/: __init__.py  geneset.py
src/geneweaver/client/cli/alpha/api/: __init__.py  genes.py  genesets.py  list.py
src/geneweaver/client/cli/alpha/datasets/: __init__.py  main.py
src/geneweaver/client/cli/alpha/parse/: __init__.py  batch.py  convert.py  main.py  utils.py
src/geneweaver/client/cli/beta/: __init__.py  auth.py
src/geneweaver/client/core/: __init__.py  app_dir.py  config.py  config_class.py  config_class_legacy.py
src/geneweaver/client/datasets/: __init__.py  base.py
src/geneweaver/client/datasets/nci60/: __init__.py  dna_combined_acgh_gene_summary.py
src/geneweaver/client/legacy/: api.py
src/geneweaver/client/parser/: __init__.py  batch.py  csv.py  general.py  utils.py  xlsx.py
src/geneweaver/client/render/: __init__.py
src/geneweaver/client/utils/: __init__.py  aon.py
src/geneweaver/client/utils/cli/: __init__.py
src/geneweaver/client/utils/cli/decorators/: __init__.py  errors.py  options.py
src/geneweaver/client/utils/cli/print/: __init__.py  csv.py  file_info.py  tables.py
src/geneweaver/client/utils/cli/prompt/: __init__.py  bool.py  enum.py  generic.py  list.py  none.py  pydantic.py
src/jax/geneweaver/client/: config.py
src/jax/geneweaver/client/api/: __init__.py  auth.py  exc.py  genesets.py  legacy.py  utils.py
tests/: __init__.py
tests/integration/: __init__.py  connective_tissue_disorder_log2fc_mouse.csv  test_gedb.py
tests/integration/api/: __init__.py  test_api_utils.py
tests/unit/: __init__.py  conftest.py  connective_tissue_disorder_log2fc_test.csv  strain-expressions.pkl  test_client_config.py  test_common.py  test_gedb.py  test_rec_to_gedb.py
tests/unit/api/: __init__.py  conftest.py  test_api_utils.py  test_genes.py  test_genesets.py  test_mapping.py
tests/unit/api/graph/: dao.py  graph_server.py  test_graph.py
tests/unit/auth/: __init__.py  test_current_user.py  test_device_code_payload.py  test_get_access_token.py  test_get_device_code_data.py  test_get_id_token.py  test_get_token_data_value_or_none.py  test_login.py  test_poll_for_flow_completion.py  test_print_device_code_instructions.py  test_token_payload.py  test_validate_token.py
tests/unit/cli/: __init__.py  test_auth.py  test_main.py  test_parser.py
tests/unit/core/: __init__.py
tests/unit/core/app_dir/: __init__.py
tests/unit/datasets/base/: __init__.py  test_as_pandas.py  test_dataset_path.py  test_download_zip_file.py  test_init.py  test_read_pandas.py
tests/unit/parser/: __init__.py  conftest.py  test_csv.py  test_general.py  test_utils.py  test_xlsx.py
tests/unit/parser/data/: example_01_extra_top_row.csv  example_01_extra_top_row.xlsx  example_02_multiple_sheet_extra_top_row.xlsx
tests/unit/utils/: __init__.py  test_aon_map_symbols.py
tests/unit/utils/cli/: __init__.py
tests/unit/utils/cli/print/: __init__.py  conftest.py
tests/unit/utils/cli/print/file_info/: __init__.py  test_print_metadata_csv.py  (+1 more)
tests/unit/utils/cli/prompt/: __init__.py
(+25 files in other folders)
