[tool.poetry]
name = "geneweaver-client"
version = "0.4.0a1"
description = "A Python Client for the Geneweaver API"
authors = ["Jax Computational Sciences <cssc@jax.org>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://thejacksonlaboratory.github.io/geneweaver-docs/"
repository = "https://github.com/TheJacksonLaboratory/geneweaver-client"
packages = [
    { from="src", include= "geneweaver/client"}
]

[tool.poetry.scripts]
gweave = "geneweaver.client.cli.main:cli"
gweaver = "geneweaver.client.cli.main:cli"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
geneweaver-core = "^0.7.0a1"
typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.4.2"
openpyxl = "^3.1.2"
auth0-python = "^4.4.0"
pandas = ">=1.5,<2.1"
xlrd = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
geneweaver-testing = "^0.0.2b3"

[tool.ruff]
select = ['F', 'E', 'W', 'A', 'C90', 'N', 'B', 'ANN', 'D', 'I', 'ERA', 'PD', 'NPY', 'PT']

[tool.ruff.per-file-ignores]
"tests/*" = ["ANN001", "ANN201"]
"src/*" = ["ANN101"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
