[tool.poetry]
name = "geneweaver-client"
version = "0.7.1a3"
description = "A Python Client for the Geneweaver API"
authors = ["Jax Computational Sciences <cssc@jax.org>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://thejacksonlaboratory.github.io/geneweaver-docs/"
repository = "https://github.com/TheJacksonLaboratory/geneweaver-client"
packages = [
    { from = "src", include = "geneweaver/client" }
]

[tool.poetry.scripts]
gweave = "geneweaver.client.cli.main:cli"
gweaver = "geneweaver.client.cli.main:cli"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28"
pydantic = {extras = ["dotenv"], version = "^1.10"}
geneweaver-core = "^0.9.0a6"
typer = {extras = ["all"], version = "^0.9"}
rich = "^13.7"
openpyxl = "^3.1"
auth0-python = "^4.7"
pandas = ">=1.5,<3"
xlrd = "^2.0"

[tool.poetry.group.dev.dependencies]
geneweaver-testing = "^0.1.2"
wget = "^3.2"


[tool.poetry.group.test.dependencies]
testcontainers-neo4j = "^0.0.1rc1"
neomodel = "^5.2.1"

[tool.ruff]
select = ['F', 'E', 'W', 'A', 'C90', 'N', 'B', 'ANN', 'D', 'I', 'ERA', 'PD', 'NPY', 'PT']

[tool.ruff.per-file-ignores]
"tests/*" = ["ANN101", "ANN001", "ANN201"]
"src/*" = ["ANN101"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
